# rtiow-cpp

./: .clang-format  .gitignore  CMakeLists.txt  Camera.h  Common.h  Hittable.h  HittableList.h  Image.h  Interval.h  Material.cpp  Material.h  Ray.h  Sphere.h  Vec3.h  main.cpp
